k8s-minecraft/eks-blueprint/k8s-files/ingress/ingress/blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  labels:
    app: blue-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  # Note here that we match both the app and the version
  selector:
    app: blue-app
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
  labels:
    app: blue-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
      - name: my-blue-app
        image: adamtravis/rollouts:blue 
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
