k8s-minecraft/eks-blueprint/k8s-files/ingress/ingress/sample-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v2
spec:
  selector:
    matchLabels:
      app: hello-v2
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-v2
    spec:
      containers:
      - name: hellov2
        image: "gcr.io/google-samples/hello-app:2.0"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-v2-svc
  labels: 
    app: hello-v2
spec:
  selector:
    app: hello-v2
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
---
apiVersion: apps/v1
kind:  Deployment
metadata:
  name: hello-v1
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hellov1
          image: gcr.io/google-samples/hello-app:1.0
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-v1-svc
  labels: 
    app: hello
spec:
  selector:
    app: hello
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http: 
      paths:
        - path: /hello-v1
          pathType: Prefix
          backend:
            service:
              name: hello-v1-svc
              port:
                number: 8080
        - path: /hello-v2
          pathType: Prefix
          backend:
            service:
              name: hello-v2-svc
              port:
                number: 8080
